fix(header): status bar not matching app theme on mobile
probably

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,8 +49,3 @@
 	--copy-light: 214, 205, 228;
 	--copy-lighter: 159, 139, 193; */
 }
-
-meta[name='theme-color'],
-meta[name='apple-mobile-web-app-status-bar-style'] {
-	content: rgb(var(--background));
-}
